Resolve sonar issues